# madr-fastapi

./: README.md
madr/: .coverage  .gitignore  alembic.ini  database.db  pyproject.toml
madr/madr/: app.py  database.py  models.py  schemas.py  security.py
madr/madr/routers/: auth.py  users.py
madr/migrations/: env.py
madr/migrations/versions/: 7553e98edaf3_create_users_table.py  816170368526_create_users_table.py
madr/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
